--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <meta charset='utf-8'>
         <title>Fangcat——Nemo&Kitten</title>
     </head>
-    <body>
+    <body bgcolor='sky-blue'>
         <img src='屏幕截图 2021-01-20 185907.png'>
+        <h1 style='color:green;'>Fangcat!</h1>
+        <p>一个Very small的Programmer</p>
+        <h2>作品展示</h2>
+        <h3 style='color:gray;'>QQ 2021</h3>
         <div id="tab_1">
             <iframe src="https://player.codemao.cn/new/we/76012746"
                 height="500"
