--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1 style='color:green;'>Fangcat!</h1>
         <p>一个Very small的Programmer</p>
         <h2>作品展示</h2>
+        <h3>下方作品请登陆游玩，否则无法访问云变量以至于提示盗版</h3>
         <h3 style='color:gray;'>QQ 2021</h3>
         <div id="tab_1">
             <iframe src="https://player.codemao.cn/new/we/76012746"
