--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <a href='https://shequ.codemao.cn/user/5079530/'>
             <button>首页</button>
         </a>
+        <a href='lit-studio.html'>
+            <button>LIT月报</button>
+        </a>
     </head>
     <body bgcolor='sky-blue'>
         <hr>
@@ -46,6 +49,6 @@
         </div>
         <hr>
         <h2>联系我</h2>
-        <p>f20091219@outlook.com</p>
+        <p style='baitext-align:center;'>f20091219@outlook.com</p>
     </body>
 </html>
