--- a/lit-studio.html
+++ b/lit-studio.html
@@ -32,6 +32,6 @@
         </div>
         <hr>
         <h2>联系我</h2>
-        <p style='baitext-align:center;'>f20091219@outlook.com</p>
+        <p><center>f20091219@outlook.com</center></p>
     </body>
 </html>
