--- a/lit-studio.html
+++ b/lit-studio.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <title>Fangcat——Nemo&Kitten</title>
+        <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <a href='index.html'>
             <img src='YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
         </a>
