--- a/lit-studio.html
+++ b/lit-studio.html
@@ -24,7 +24,7 @@
         </a>
         <h2 style='color:gray;'>LIT作品投稿（请先登录！）</h2>
         <div id="tab_1">
-            <iframe src="https://player.codemao.cn/new/77323763"
+            <iframe src="https://player.codemao.cn/we/77323763"
                 height="500"
                 width="1200"
                 frameborder="0"
