--- a/lit-studio.html
+++ b/lit-studio.html
@@ -15,6 +15,12 @@
         </a>
     </head>
     <body bgcolor='green'>
+        <a href='https://th24536735-1.jzfkw.cn'>
+            <h1>LIT官方网站点我</h1>
+        </a>
+        <a href='https://shequ.codemao.cn/work_shop/5108'>
+            <h1>LIT编程猫页面点我</h1>
+        </a>
         <h1 style='color:white;'>LIT月报</h1>
         <p color='color:blue;'>
             LIT月报是由我组织的一个月报，通常将在每月中上旬发布，内容大致包括本月作品、每月教程等等，如想上刊，请加LITQQ群（每月作品评选也将在QQ群中进行）。
@@ -22,9 +28,13 @@
         <a href='https://shequ.codemao.cn/community/358418'>
             <button>LIT月报2021-1月号</button>
         </a>
+        <a href='https://shequ.codemao.cn/community/359133'>
+            <button>LIT月报2021-2月号</button>
+        </a>
         <h2 style='color:gray;'>LIT作品投稿（请先登录！）</h2>
+        <p style='color:white;'>请放心，此为内嵌式页面，我们不会非法收集您的信息。</p>
         <div id="tab_1">
-            <iframe src="https://player.codemao.cn/we/77323763"
+            <iframe src="https://shequ.codemao.cn/work/77323763"
                 height="500"
                 width="1200"
                 frameborder="0"
