--- a/lit-studio.html
+++ b/lit-studio.html
@@ -31,15 +31,10 @@
         <a href='https://shequ.codemao.cn/community/359133'>
             <button>LIT月报2021-2月号</button>
         </a>
-        <h2 style='color:gray;'>LIT作品投稿（请先登录！）</h2>
-        <p style='color:white;'>请放心，此为内嵌式页面，我们不会非法收集您的信息。</p>
-        <div id="tab_1">
-            <iframe src="https://shequ.codemao.cn/work/77323763"
-                height="500"
-                width="1200"
-                frameborder="0"
-                scrolling="0"
-            ></iframe>
+        <h2 style='color:gray;'>LIT作品投稿</h2>
+        <a href='https://shequ.codemao.cn/work/77323763'>
+            <button>立即投稿</button>
+        </a>
         </div>
         <hr>
         <h2>联系我</h2>
