--- a/n/minecraft/index.html
+++ b/n/minecraft/index.html
@@ -5,11 +5,9 @@
         <title>Minecraft on nemo——Free 2D Minecraft PE on mobile!</title>
         <link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <a href='index.html'>
-            <img src='YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
-        </a>
-        <a href='index.html'>
             <img src='mc.jpg' width=70 height=70>
         </a>
+        <h1 style='color:lightgreen;'>Minecraft RE Offical Website</h1>
     </head>
     <body bgcolor='brown'>
         <h1 style='color:white;'>Minecraft 2D on Nemo</h1>
@@ -17,14 +15,14 @@
         <h3 style='color:white;'>1 Download Codemao Nemo APP</h3>
         <a href='https://nemo.codemao.cn/'>
             <button>
-                <h2 style='color:pink;'>Download Codemao Nemo APP!</h2>
+                <h2 style='color:red;'>Download Codemao Nemo APP!</h2>
             </button>
         </a>
         <h3 style='color:white;'>2 Find Minecraft RE in Nemo</h3>
-        <p style='color:blue;'>Click'Search'Button,and input'Fangcat'.Then click it and fing Minecraft RE.</p>
+        <h4 style='color:lightgreen;'>Click'Search'Button,and input'Fangcat'.Then click it and fing Minecraft RE.</h4>
         <h3 style='color:white;'>3 Play it!</h3>
         <hr>
-        <h2 style='color:white;'>Servers in Minecraft RE</h2>
+        <h2 style='color:lightgreen;'>Servers in Minecraft RE</h2>
         <img src='fg.jpg'>
         <h3 style='color:white;'>Fanggame——Crative game server!</h3>
         <img src='hc.jpg'>
