--- a/n/minecraft/index.html
+++ b/n/minecraft/index.html
@@ -23,9 +23,9 @@
         <h3 style='color:white;'>3 Play it!</h3>
         <hr>
         <h2 style='color:lightgreen;'>Servers in Minecraft RE</h2>
-        <img src='fg.jpg'>
+        <img src='fg.png'>
         <h3 style='color:white;'>Fanggame——Crative game server!</h3>
-        <img src='hc.jpg'>
+        <img src='hc.png'>
         <h3 style='color:white;'>Hyperland——Mini games server!</h3>
         <hr>
         <h2 style='color:white;'>Contact us</h2>
