--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <a href='lit-studio.html'>
             <button>LIT月报</button>
         </a>
+        <a href='/work/index.html'>
+            <button>作品预览(Kitten)</button>
+        </a>
         <a href='/n/minecraft/index.html'>
             <button>Minecraft Offical Site</button>
         </a>
@@ -24,15 +27,6 @@
         <p>一个Very small的Programmer</p>
         <h2>作品展示</h2>
         <h3>下方作品请登陆游玩，否则无法访问云变量以至于提示盗版</h3>
-        <h3 style='color:gray;'>QQ 2021</h3>
-        <div id="tab_1">
-            <iframe src="https://player.codemao.cn/new/we/76012746"
-                height="500"
-                width="1200"
-                frameborder="0"
-                scrolling="0"
-            ></iframe>
-        </div>
         <h3 style='color:gray;'>Chiver(For Mobile)</h3>
         <div id="tab_1">
             <iframe src="https://nemo.codemao.cn/w/39308807"
