--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset='utf-8'>
         <title>Fangcat——Nemo&Kitten</title>
-        <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+        <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <a href='index.html'>
-            <img src='YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
+            <img src='/assets/YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
         </a>
         <a href='https://shequ.codemao.cn/user/5079530/'>
             <button>首页</button>
@@ -19,7 +19,7 @@
     </head>
     <body bgcolor='sky-blue'>
         <hr>
-        <img src='屏幕截图 2021-01-20 185907.png'>
+        <img src='/assets/屏幕截图 2021-01-20 185907.png'>
         <h1 style='color:green;'>Fangcat!</h1>
         <p>一个Very small的Programmer</p>
         <h2>作品展示</h2>
