--- a/n/minecraft/index.html
+++ b/n/minecraft/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset='utf-8'>
         <title>Minecraft on nemo——Free 2D Minecraft PE on mobile!</title>
-        <link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+        <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <a href='index.html'>
-            <img src='mc.jpg' width=70 height=70>
+            <img src='/assets/mc.jpg' width=70 height=70>
         </a>
         <h1 style='color:lightgreen;'>Minecraft RE Offical Website</h1>
     </head>
@@ -23,9 +23,9 @@
         <h3 style='color:white;'>3 Play it!</h3>
         <hr>
         <h2 style='color:lightgreen;'>Servers in Minecraft RE</h2>
-        <img src='fg.png'>
+        <img src='/assets/fg.png'>
         <h3 style='color:white;'>Fanggame——Crative game server!</h3>
-        <img src='hc.png'>
+        <img src='/assets/hc.png'>
         <h3 style='color:white;'>Hyperland——Mini games server!</h3>
         <hr>
         <h2 style='color:white;'>Contact us</h2>
