--- a/lit-studio.html
+++ b/lit-studio.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset='utf-8'>
         <title>Fangcat——Nemo&Kitten</title>
-        <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+        <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <a href='index.html'>
-            <img src='YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
+            <img src='/assets/YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
         </a>
         <a href='https://shequ.codemao.cn/user/5079530/'>
             <button>首页</button>
