--- a/demos/index.html
+++ b/demos/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <meta charset='utf-8'>
         <script src='/assets/demo/js/write.js'></script>
     </head>
     <body>
