--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <a href='lit-studio.html'>
             <button>LIT月报</button>
         </a>
+        <a href='download.html'>
+            <button>资源下载</button>
+        </a>
         <a href='/n/minecraft/index.html'>
             <button>Minecraft Offical Site</button>
         </a>
