--- a/download.html
+++ b/download.html
@@ -31,7 +31,7 @@
             </button>
         </a>
         <hr>
-        <img src='/assets/Codemao.png' height=50 width=50>
+        <img src='/assets/codemao.png' height=50 width=50>
         <a href='https://pan.baidu.com/s/1-EieDdf2Y_PBgaj7HBJOfg'>
             <button>
                 <h3>Windows下载</h1>
