--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <h2>作品展示</h2>
         <h3>下方作品请登陆游玩，否则无法访问云变量以至于提示盗版</h3>
         <h3 style='color:gray;'>Chiver(For Mobile)</h3>
+        <script>
+            console.log('Chiver正在加载')
+        </script>
         <div id="tab_1">
             <iframe src="https://nemo.codemao.cn/w/39308807"
                 height="500"
@@ -36,7 +39,13 @@
                 scrolling="0"
             ></iframe>
         </div>
+        <script>
+            console.log('Chiver加载完成')
+        </script>
         <h3 style='color:gray;'>Minecraft(PE)</h3>
+        <script>
+            console.log('MCRE正在加载')
+        </script>
         <div id="tab_1">
             <iframe src="https://nemo.codemao.cn/w/50510001"
                 height="500"
@@ -45,8 +54,14 @@
                 scrolling="0"
             ></iframe>
         </div>
+        <script>
+            console.log('MCRE加载完成')
+        </script>
         <hr>
         <h2>联系我</h2>
         <p><center>f20091219@outlook.com</center></p>
+        <script>
+            console.log('页面完全加载完成')
+        </script>
     </body>
 </html>
