--- a/download.html
+++ b/download.html
@@ -4,23 +4,25 @@
         <meta charset='utf-8'>
         <title>Fangcat——Nemo&Kitten</title>
         <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
-        <a href='index.html'>
-            <img src='/assets/YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
-        </a>
-        <a href='https://shequ.codemao.cn/user/5079530/'>
-            <button>首页</button>
-        </a>
-        <a href='lit-studio.html'>
-            <button>LIT月报</button>
-        </a>
-        <a href='download.html'>
-            <button>常用资源下载</button>
-        </a>
-        <a href='/n/minecraft/index.html'>
-            <button>Minecraft Offical Site</button>
-        </a>
+        <div id='top' style='bgcolor:white;color:blue;'>
+            <a href='index.html'>
+                <img src='/assets/YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
+            </a>
+            <a href='https://shequ.codemao.cn/user/5079530/'>
+                <button>首页</button>
+            </a>
+            <a href='lit-studio.html'>
+                <button>LIT月报</button>
+            </a>
+            <a href='download.html'>
+                <button>资源下载</button>
+            </a>
+            <a href='/n/minecraft/index.html'>
+                <button>Minecraft Offical Site</button>
+            </a>
+        </div>
     </head>
-    <body>
+    <body bgcolor='skyblue'>
         <hr>
         <h1>资源下载</h1>
         <h2 style='color:red;'>提取码全部为fang</h2>
