--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <title>Fangcat——Nemo&Kitten</title>
         <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
-        <div id='top' style='color:blue;' bg-color='white'>
+        <div>
             <a href='index.html'>
                 <img src='/assets/YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
             </a>
