--- a/n/minecraft/index.html
+++ b/n/minecraft/index.html
@@ -2,33 +2,36 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>Minecraft on nemo——Free 2D Minecraft PE on mobile!</title>
+        <title>Nemo上的MC！——免费的手机版2DMC！/title>
         <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <a href='index.html'>
             <img src='/assets/mc.jpg' width=70 height=70>
         </a>
-        <h1 style='color:lightgreen;'>Minecraft RE Offical Website</h1>
+        <h1 style='color:lightgreen;'>我的世界RE官方网站</h1>
     </head>
     <body bgcolor='brown'>
-        <h1 style='color:white;'>Minecraft 2D on Nemo</h1>
-        <h2 style='color:green;'>How to play it?</h2>
-        <h3 style='color:white;'>1 Download Codemao Nemo APP</h3>
+        <h1 style='color:white;'>在Nemo上的MC</h1>
+        <h2 style='color:green;'>如何玩到MCRE？</h2>
+        <h3 style='color:white;'>1 下载编程猫NemoAPP</h3>
         <a href='https://nemo.codemao.cn/'>
             <button>
-                <h2 style='color:red;'>Download Codemao Nemo APP!</h2>
+                <h2 style='color:red;'>下载传送门</h2>
             </button>
         </a>
-        <h3 style='color:white;'>2 Find Minecraft RE in Nemo</h3>
-        <h4 style='color:lightgreen;'>Click'Search'Button,and input'Fangcat'.Then click it and fing Minecraft RE.</h4>
-        <h3 style='color:white;'>3 Play it!</h3>
+        <h3 style='color:white;'>2 在Nemo中找到MCRE</h3>
+        <h4 style='color:lightgreen;'>搜索Fangcat，进入我的主页之后点击最新版MCRE</h4>
+        <h3 style='color:white;'>3 游玩！</h3>
         <hr>
-        <h2 style='color:lightgreen;'>Servers in Minecraft RE</h2>
+        <h2 style='color:lightgreen;'>MCRE中的服务器</h2>
         <img src='/assets/fg.png'>
-        <h3 style='color:white;'>Fanggame——Crative game server!</h3>
+        <h3 style='color:white;'>Fanggame——创造服务器！</h3>
         <img src='/assets/hc.png'>
-        <h3 style='color:white;'>Hyperland——Mini games server!</h3>
+        <h3 style='color:white;'>Hyperland——小游戏服务器!</h3>
         <hr>
-        <h2 style='color:white;'>Contact us</h2>
+        <a href='giftcode.html'>
+            <button>卡通材质包兑换码</button>
+        </a>
+        <h2 style='color:white;'>联系我</h2>
         <p style='color:white;'><center>f20091219@outlook.com</center></p>
     </body>
 </html>
