--- a/n/minecraft/index.html
+++ b/n/minecraft/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>Nemo上的MC！——免费的手机版2DMC！/title>
+        <title>Nemo上的MC！——免费的手机版2DMC！</title>
         <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <a href='index.html'>
             <img src='/assets/mc.jpg' width=70 height=70>
