--- a/n/minecraft/giftcode.html
+++ b/n/minecraft/giftcode.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>Nemo上的MC！——免费的手机版2DMC！/title>
+        <title>Nemo上的MC！——免费的手机版2DMC！</title>
         <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <a href='index.html'>
             <img src='/assets/mc.jpg' width=70 height=70>
         </a>
         <h1 style='color:lightgreen;'>我的世界RE官方网站</h1>
     </head>
-    <body>
+    <body bg-color='skyblue'>
         <h2>几个免费的卡通材质包兑换码</h2>
         <p>MCR38HI21 MCR9F6100 MCR264F1 MCR36DFD0</p>
     </body>
