--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Fangcat——Nemo&Kitten</title>
         <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
         <div>
+            <a href='index.html'>
+                <img src='/assets/YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
+            </a>
             <a href='https://shequ.codemao.cn/user/5079530/' style='color:white;'>个人主页</a>
             <a href='lit-studio.html' style='color:white;'>LIT月报</a>
             <a href='download.html' style='color:white;'>资源下载</a>
