--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href='https://shequ.codemao.cn/user/5079530/' style='color:white;'>个人主页</a>
             <a href='lit-studio.html' style='color:white;'>LIT月报</a>
             <a href='download.html' style='color:white;'>资源下载</a>
-            <a href='/blog/index.html' style='color:white;'>博客</a>
+            <a href='https://fangcatchina.github.io' style='color:white;'>博客</a>
             <a href='/n/minecraft/index.html' style='color:white;'>Minecraft Offical Site</a>
         </div>
     </head>
