--- a/v/player.html
+++ b/v/player.html
@@ -7,14 +7,6 @@
     </head>
     <body>
         <h1>测试视频——用Micro:Bit玩模拟Switch!</h1>
-        <script>
-          //前置
-          //设置视频
-          var video='test.mp4'
-          //播放器
-          document.write('<video width="640" height="480" controls>')
-          document.write('<source src="'+video+'" type="video/mp4">')
-          document.write('</video>')
-        </script>
+        <iframe src="//player.bilibili.com/player.html?aid=248463343&bvid=BV1Xv411V79s&cid=349779439&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         <p>简介：想玩的看链接：https://fcnemo.gitee.io/n/virswitch</p>
     </body>
