--- a/lit-studio.html
+++ b/lit-studio.html
@@ -1,4 +1,7 @@
-<!DOCTYPE HTML>
+<script>
+    alert('本页面暂时荒废')
+</script>
+<!--<!DOCTYPE HTML>
 <html>
     <head>
         <meta charset='utf-8'>
@@ -41,4 +44,4 @@
         <h2>联系我</h2>
         <p><center>f20091219@outlook.com</center></p>
     </body>
-</html>
+</html>-->
