--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
                 <img src='/assets/YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
             </a>
             <a href='https://shequ.codemao.cn/user/5079530/' style='color:white;'>个人主页</a>
-            <a href='lit-studio.html' style='color:white;'>LIT月报</a>
+            <a href='v/index.html' style='color:white;'>视频</a>
             <a href='download.html' style='color:white;'>资源下载</a>
             <a href='https://fangcatchina.github.io' style='color:white;'>博客</a>
             <a href='/n/minecraft/index.html' style='color:white;'>Minecraft Offical Site</a>
+            <a href='/n/virswitch/index.html' style='color:white;'>Virtual Switch Offical Site</a>
         </div>
     </head>
     <body bgcolor='sky-blue'>
