--- a/index.html
+++ b/index.html
@@ -1,63 +1,20 @@
-<!DOCTYPE HTML>
 <html>
     <head>
-        <meta charset='utf-8'>
-        <title>Fangcat——Nemo&Kitten</title>
-        <link href="/assets/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+        <meta charset="utf-8">
+        <p style='color:orange;'>我的网站升级啦！</p>
+        <style type="text/css">
+            a{text-decoration:none;}
+        </style>
+        <!--导航栏-->
         <div>
-            <a href='index.html'>
-                <img src='/assets/YW5kXzEwMDFfNTA3OTUzMF8wXzE2MTEwNDU1OTg2MjNfQUpSb0JXOVU=.jpg' width=70 height=70>
-            </a>
-            <a href='https://shequ.codemao.cn/user/5079530/' style='color:white;'>个人主页</a>
-            <a href='v/index.html' style='color:white;'>视频</a>
-            <a href='download.html' style='color:white;'>资源下载</a>
-            <a href='https://fangcatchina.github.io' style='color:white;'>博客</a>
-            <a href='/n/minecraft/index.html' style='color:white;'>Minecraft Offical Site</a>
-            <a href='/n/virswitch/index.html' style='color:white;'>Virtual Switch Offical Site</a>
+            <title>Fangcat</title>
+            <img height="40" width='120' src='assets/logo.png'>
+            <hr>
+            <p><a href='index.html' style="color:black;">首页</a> <a href='pptos.html' style="color:black;">PPTOS</a></p>
+            <hr>
         </div>
     </head>
-    <body bgcolor='sky-blue'>
-        <hr>
-        <img src='/assets/屏幕截图 2021-01-20 185907.png'>
-        <h1 style='color:green;'>Fangcat!</h1>
-        <p>一个Very small的Programmer</p>
-        <h2>作品展示</h2>
-        <h3>下方作品请登陆游玩，否则无法访问云变量以至于提示盗版</h3>
-        <h3 style='color:gray;'>Chiver(For Mobile)</h3>
-        <script>
-            console.log('Chiver正在加载')
-        </script>
-        <div id="tab_1">
-            <iframe src="https://nemo.codemao.cn/w/39308807"
-                height="500"
-                width="1200"
-                frameborder="0"
-                scrolling="0"
-            ></iframe>
-        </div>
-        <script>
-            console.log('Chiver加载完成')
-        </script>
-        <h3 style='color:gray;'>Minecraft(PE)</h3>
-        <script>
-            console.log('MCRE正在加载')
-        </script>
-        <div id="tab_1">
-            <iframe src="https://nemo.codemao.cn/w/50510001"
-                height="500"
-                width="1200"
-                frameborder="0"
-                scrolling="0"
-            ></iframe>
-        </div>
-        <script>
-            console.log('MCRE加载完成')
-        </script>
-        <hr>
-        <h2>联系我</h2>
-        <p><center>f20091219@outlook.com</center></p>
-        <script>
-            console.log('页面完全加载完成')
-        </script>
+    <body>
+        <a href='pptos.html'><img src='assets/swift/ossp2015.png' height='500' width='1400'></a>
     </body>
 </html>
