--- a/pptos.html
+++ b/pptos.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link href="assets/logo2.png" rel="shortcut icon"/>
         <p style='color:orange;'>我的网站升级啦！</p>
         <style type="text/css">
             a{text-decoration:none;}
