--- a/pptos.html
+++ b/pptos.html
@@ -37,4 +37,9 @@
             (1) FCUOS推荐使用Office 2019及更高版本，提示是否启用宏时请点击“是”，否则记事本将无法正常运行。<br>(2) 请在提示是否启用加载项时选择“启用”<br>(3) 壁纸来自网络
         </blockquote>
     </body>
+    <footer>
+        <hr>
+        <h2>联系我</h2>
+        <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com' style='color: black;'>点我</a>或发送邮件给f20091219@outlook.com</p>
+    </footer>
 </html>
