--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
     </head>
     <body>
         <a href='pptos.html'><img src='assets/swift/ossp2015.png' height='500' width='1400'></a>
+        <h2>我的作品</h2>
+        <p>点击以访问作品介绍页</p>
+        <h3><a href='pptos.html' style='color: black;'>FCUOS</a><br><a href='nosite.html' style='color: black;'>Fangcat Watch</a><br><a href='nosite.html' style='color: black;'>Minecraft RE</a></h3>
     </body>
+    <footer>
+        <hr>
+        <h2>联系我</h2>
+        <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com' style='color: black;'>点我</a>或发送邮件给f20091219@outlook.com</p>
+    </footer>
 </html>
