--- a/pptos.html
+++ b/pptos.html
@@ -19,6 +19,11 @@
         <img src='assets/swift/ossp2015.png' height='500' width='1400'>
         <h1>FCUOS</h1><p>(1)</p>
         <hr>
+        <!--Size-->
+        <h2>更小体积</h2>
+        <p>更好的压缩算法，缩小体积。</p>
+        <img src='assets/FCUOS/size.jpg'>
+        <hr>
         <!--Mode-->
         <h2>全新功能</h2>
         <p>最新的天气与Google Chrome。得益于拓展Web Viewer。(2)</p>
@@ -31,7 +36,7 @@
         <hr>
         <h2>即刻下载</h2>
         <a href='https://fangapp.lanzoui.com/b01ifui8b'><button>蓝奏云链接</button></a>
-        <p>下载密码：fangcatnb 演示版本：FCUOS 2015 Snapshot v1</p>
+        <p>下载密码：fangcatnb 演示版本：FCUOS 2015 Release</p>
         <hr>
         <blockquote style="color: gray;">
             (1) FCUOS推荐使用Office 2019及更高版本，提示是否启用宏时请点击“是”，否则记事本将无法正常运行。<br>(2) 请在提示是否启用加载项时选择“启用”<br>(3) 壁纸来自网络
