--- a/pptos.html
+++ b/pptos.html
@@ -36,6 +36,7 @@
         <hr>
         <h2>即刻下载</h2>
         <a href='https://fangapp.lanzoui.com/b01ifui8b'><button>蓝奏云链接</button></a>
+        <a href='polog.html'><button>更新日志</button></a>
         <p>下载密码：fangcatnb 演示版本：FCUOS 2015 Release</p>
         <hr>
         <blockquote style="color: gray;">
