--- a/bugs/index.html
+++ b/bugs/index.html
@@ -6,18 +6,16 @@
         <style type="text/css">
             a{text-decoration:none;color:black;}
         </style>
-        <!--导航栏-->
-        <div>
-            <title>Fangcat</title>
-            <img height="40" width='120' src='assets/logo.png'>
-            <hr>
-            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a></h3>
-            <hr>
-        </div>
+        <title>Fangcat</title>
+        <a href='index.html'><img height="60" width='120' src='assets/logo.png'></a>
+        <hr>
     </head>
     <body>
-        <h1 style='text-align: center;'>对不起，本作品暂时没有介绍页面</h1>
-        <p style='text-align: center;'>您可以尝试稍后再来或催更</p>
+        <h1>Fangcat BUGS Report Center</h1>
+        <br>
+        <h2>最近提出的Bugs</h2><a href='buglist.html'>所有Bug(点我)</a>
+        <br>
+        <iframe src='bugs.html' height='200' width='1400'></iframe>
     </body>
     <footer>
         <hr>
