--- a/bugs/buglist.html
+++ b/bugs/buglist.html
@@ -5,19 +5,14 @@
         <p style='color:orange;'>我的网站升级啦！</p>
         <style type="text/css">
             a{text-decoration:none;color:black;}
-        </style>
-        <!--导航栏-->
-        <div>
-            <title>Fangcat</title>
-            <img height="40" width='120' src='assets/logo.png'>
-            <hr>
-            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a></h3>
-            <hr>
-        </div>
+        </style>            
+        <title>Fangcat</title>
+        <a href='index.html'><img height="60" width='120' src='assets/logo.png'></a>
+        <hr>
     </head>
     <body>
-        <h1 style='text-align: center;'>对不起，本作品暂时没有介绍页面</h1>
-        <p style='text-align: center;'>您可以尝试稍后再来或催更</p>
+        <h1>Bugs</h1>
+        <iframe src='bugs.html' height='200' width='1400'></iframe>
     </body>
     <footer>
         <hr>
