--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <link href="assets/logo2.png" rel="shortcut icon"/>
         <p style='color:orange;'>我的网站升级啦！</p>
         <style type="text/css">
-            a{text-decoration:none;}
+            a{text-decoration:none;color:black;}
         </style>
         <!--导航栏-->
         <div>
             <title>Fangcat</title>
             <img height="40" width='120' src='assets/logo.png'>
             <hr>
-            <p><a href='index.html' style="color:black;">首页</a> <a href='pptos.html' style="color:black;">PPTOS</a></p>
+            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a></h3>
             <hr>
         </div>
     </head>
