--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <title>Fangcat</title>
             <img height="40" width='120' src='assets/logo.png'>
             <hr>
-            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a></h3>
+            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a>   <a href='contact.htm'>联系我</a></h3>
             <hr>
         </div>
     </head>
@@ -19,11 +19,13 @@
         <a href='pptos.html'><img src='assets/swift/ossp2015.png' height='500' width='1400'></a>
         <h2>我的作品</h2>
         <p>点击以访问作品介绍页</p>
-        <h3><a href='pptos.html' style='color: black;'>FCUOS</a><br><a href='nosite.html' style='color: black;'>Fangcat Watch</a><br><a href='nosite.html' style='color: black;'>Minecraft RE</a></h3>
+        <h3 style="text-align:center;"><a href='pptos.html' style='color: black;'>FCUOS</a><br><a href='remake.html' style='color: black;'>Wormy Remake</a><br><a href='nosite.html' style='color: black;'>Fangcat Watch</a><br><a href='nosite.html' style='color: black;'>Minecraft RE</a></h3>
     </body>
     <footer>
         <hr>
         <h2>联系我</h2>
         <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com' style='color: black;'>点我</a>或发送邮件给f20091219@outlook.com</p>
+        <h2>友情链接</h2>
+        <a href='http://gitee.com'>Gitee</a>
     </footer>
 </html>
