--- a/remake.html
+++ b/remake.html
@@ -16,19 +16,13 @@
         </div>
     </head>
     <body>
-        <h1>FCUOS版本更新日志（2016版本之后）</h1>
-        <hr>
-        <h2>FCUOS 2016 Snapshot v1</h2>
-        <p style="color: green;">|小更新|</p>
-        <p style="color: green;">|稳定版本|</p>
-        <h3>更新内容:</h3>
-        <p>UI阴影，增加文件管理</p>
-        <hr>
-        <h2>FCUOS 2016 Snapshot v0.1</h2>
-        <p style="color: green;">|小更新|</p>
-        <p style="color: green;">|稳定版本|</p>
-        <h3>更新内容:</h3>
-        <p>添加了一个应用</p>
+        <h1>Wormy Remake</h1>
+        <p>改编自Al Sweigart的Wormy</p>
+        <p>需要的软件：Python</p>
+        <p>需要的库：Pygame/Easygui</p>
+        <p>提取码：fang</p>
+        <a href='https://pan.baidu.com/s/1vpgXTaBP-WUaASzlcb4__Q'><button>即刻下载</button></a>
+        <a href='assets/down/Wormy_Remake.py'><button>不限速下载</button></a>
     </body>
     <footer>
         <hr>
