--- a/contact.htm
+++ b/contact.htm
@@ -3,9 +3,6 @@
         <meta charset="utf-8">
         <link href="assets/logo2.png" rel="shortcut icon"/>
         <p style='color:orange;'>我的网站升级啦！</p>
-        <style type="text/css">
-            a{text-decoration:none;color:black;}
-        </style>
         <!--导航栏-->
         <div>
             <title>Fangcat</title>
@@ -14,22 +11,12 @@
             <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a>   <a href='contact.htm'>联系我</a></h3>
             <hr>
         </div>
+        <style>
+            a{text-decoration:none;color:rgb(0, 119, 255);}
+        </style>
+        <a href='https://space.bilibili.com/588672425'><img src='https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fwww.looktmt.com%2Fupload%2Ffile%2Fbizupload%2F201910%2F17%2Faddfbcdg_105255264.png&refer=http%3A%2F%2Fwww.looktmt.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1628319783&t=e893e51f30c593bc796cdd90c8915714'></a>
+        <a href='https://weibo.com/p/1005057625534975'><img src='https://img1.baidu.com/it/u=1340256327,3027741866&fm=26&fmt=auto&gp=0.jpg'></a>
     </head>
-    <body>
-        <h1>FCUOS版本更新日志（2016版本之后）</h1>
-        <hr>
-        <h2>FCUOS 2016 Snapshot v1</h2>
-        <p style="color: green;">|小更新|</p>
-        <p style="color: green;">|稳定版本|</p>
-        <h3>更新内容:</h3>
-        <p>UI阴影，增加文件管理</p>
-        <hr>
-        <h2>FCUOS 2016 Snapshot v0.1</h2>
-        <p style="color: green;">|小更新|</p>
-        <p style="color: green;">|稳定版本|</p>
-        <h3>更新内容:</h3>
-        <p>添加了一个应用</p>
-    </body>
     <footer>
         <hr>
         <h2>联系我</h2>
