--- a/dev.html
+++ b/dev.html
@@ -11,7 +11,7 @@
             <title>Fangcat</title>
             <img height="40" width='120' src='assets/logo.png'>
             <hr>
-            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a></h3>
+            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a>   <a href='contact.htm'>联系我</a></h3>
             <hr>
         </div>
     </head>
@@ -25,5 +25,7 @@
         <hr>
         <h2>联系我</h2>
         <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com' style='color: black;'>点我</a>或发送邮件给f20091219@outlook.com</p>
+        <h2>友情链接</h2>
+        <a href='http://gitee.com'>Gitee</a>
     </footer>
 </html>
