--- a/pptos.html
+++ b/pptos.html
@@ -11,7 +11,7 @@
             <title>Fangcat</title>
             <img height="40" width='120' src='assets/logo.png'>
             <hr>
-            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a></h3>
+            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a>   <a href='contact.htm'>联系我</a></h3>
             <hr>
         </div>
     </head>
@@ -20,19 +20,45 @@
         <h1>FCUOS</h1><p>(1)</p>
         <hr>
         <!--Size-->
-        <h2>更小体积</h2>
-        <p>更好的压缩算法，缩小体积。</p>
-        <img src='assets/FCUOS/size.jpg'>
+        <div style='text-align: right;'>
+            <img src='assets/FCUOS/size.jpg' align='left' height='250' width="200">
+            <h2>更小体积</h2>
+            <p>更好的压缩算法，缩小体积。</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
         <hr>
         <!--Mode-->
-        <h2>全新功能</h2>
-        <p>最新的天气与Google Chrome。得益于拓展Web Viewer。(2)</p>
-        <img src='assets/FCUOS/mode.jpg'>
+        <div style='text-align: left;'>
+            <img src='assets/FCUOS/mode.jpg' align='right'>
+            <h2>全新功能</h2>
+            <p>最新的天气与Google Chrome。得益于拓展Web Viewer。(2)</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
         <hr>
         <!--Wallpaper-->
-        <h2>全新壁纸</h2>
-        <p>新壁纸，新心情(3)</p>
-        <img src='assets/FCUOS/wall.jfif'>
+        <div style='text-align: right;'>
+            <img src='assets/FCUOS/wall.jfif' height='80' width="120" align='left'>
+            <h2>全新壁纸</h2>
+            <p>新壁纸，新心情(3)</p>
+            
+        </div>
         <hr>
         <h2>即刻下载</h2>
         <a href='https://fangapp.lanzoui.com/b01ifui8b'><button>蓝奏云链接</button></a>
@@ -47,5 +73,7 @@
         <hr>
         <h2>联系我</h2>
         <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com' style='color: black;'>点我</a>或发送邮件给f20091219@outlook.com</p>
+        <h2>友情链接</h2>
+        <a href='http://gitee.com'>Gitee</a>
     </footer>
 </html>
