--- a/bugs/bugs.html
+++ b/bugs/bugs.html
@@ -3,8 +3,25 @@
         <meta charset="utf-8">
     </head>
     <body>
+        <h2>FAQ:无法使用记事本、Google Chrome与天气</h2>
+        <button style='color:red;'>严重</button>
+        <button style='color:green;'>已给出解答</button>
+        <p>时间：2021-7-8</p>
+        <p>
+            软件：FCUOS
+            <br>
+            版本：2012 Release之后的版本
+            <br>
+            出现的错误：Web Viewer不显示、无法使用记事本
+            <br>
+            提出人：<button style='color:orange;'>Developer</button>Fangcat
+            <br>
+            意见：本作品无法使用WPS，请使用Office 2019及之后的版本。当提示不安全内容请选择启用（记事本依赖的是宏，宏通常会提示不安全，请放心）
+        </p>
+        <hr>
         <h2>Bug:滚动会翻页</h2>
-        <p style='color:red;'>普通</p>
+        <button style='color:red;'>普通</button>
+        <button style='color:brown;'>无法解决</button>
         <p>时间：2021-7-8</p>
         <p>
             软件：FCUOS
@@ -17,14 +34,14 @@
             <br>
             意见：无法解决
         </p>
-    <hr>
+        <hr>
     </body>
 </html>
 <!--模板-->
 <!--
     <h2>Bug:XXXX</h2>
     <br>
-    <p style='color:red;'>紧急/普通/严重</p>
+    <button style='color:red;'>紧急/普通/严重</button>
     <p>时间：XXXX-XX-XX</p>
     <p>
         软件：
