--- a/pptos.html
+++ b/pptos.html
@@ -5,13 +5,14 @@
         <p style='color:orange;'>我的网站升级啦！</p>
         <style type="text/css">
             a{text-decoration:none;color:black;}
+            footer{background-color: gray;color:white}
         </style>
         <!--导航栏-->
         <div>
             <title>Fangcat</title>
             <img height="40" width='120' src='assets/logo.png'>
             <hr>
-            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a>   <a href='contact.htm'>联系我</a></h3>
+            <h3><a href='index.html' style='color:black;'>首页</a>   <a href='pptos.html'style='color:black;'>PPTOS</a>   <a href='bugs/index.html'style='color:black;'>Bugs</a>   <a href='contact.htm'style='color:black;'>联系我</a></h3>
             <hr>
         </div>
     </head>
@@ -70,10 +71,14 @@
         </blockquote>
     </body>
     <footer>
+        <style>
+            a{color:white}
+        </style>
         <hr>
         <h2>联系我</h2>
-        <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com' style='color: black;'>点我</a>或发送邮件给f20091219@outlook.com</p>
+        <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com'>点我</a>或发送邮件给f20091219@outlook.com</p>
         <h2>友情链接</h2>
         <a href='http://gitee.com'>Gitee</a>
+    </footer>
     </footer>
 </html>
