--- a/bugs/buglist.html
+++ b/bugs/buglist.html
@@ -5,9 +5,11 @@
         <p style='color:orange;'>我的网站升级啦！</p>
         <style type="text/css">
             a{text-decoration:none;color:black;}
+            footer{background-color: gray;color:white}
         </style>            
         <title>Fangcat</title>
         <a href='index.html'><img height="60" width='120' src='assets/logo.png'></a>
+        <h3><a href='/' style='color:black;'>回到首页</a></h3>
         <hr>
     </head>
     <body>
@@ -15,8 +17,13 @@
         <iframe src='bugs.html' height='200' width='1400'></iframe>
     </body>
     <footer>
+        <style>
+            a{color:white}
+        </style>
         <hr>
         <h2>联系我</h2>
-        <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com' style='color: black;'>点我</a>或发送邮件给f20091219@outlook.com</p>
+        <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com'>点我</a>或发送邮件给f20091219@outlook.com</p>
+        <h2>友情链接</h2>
+        <a href='http://gitee.com'>Gitee</a>
     </footer>
 </html>
