--- a/contact.htm
+++ b/contact.htm
@@ -8,19 +8,23 @@
             <title>Fangcat</title>
             <img height="40" width='120' src='assets/logo.png'>
             <hr>
-            <h3><a href='index.html'>首页</a>   <a href='pptos.html'>PPTOS</a>   <a href='bugs/index.html'>Bugs</a>   <a href='contact.htm'>联系我</a></h3>
+            <h3><a href='index.html' style='color:black;'>首页</a>   <a href='pptos.html'style='color:black;'>PPTOS</a>   <a href='bugs/index.html'style='color:black;'>Bugs</a>   <a href='contact.htm'style='color:black;'>联系我</a></h3>
             <hr>
         </div>
         <style>
             a{text-decoration:none;color:rgb(0, 119, 255);}
+            footer{background-color: gray;color:white}
         </style>
         <a href='https://space.bilibili.com/588672425'><img src='https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fwww.looktmt.com%2Fupload%2Ffile%2Fbizupload%2F201910%2F17%2Faddfbcdg_105255264.png&refer=http%3A%2F%2Fwww.looktmt.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1628319783&t=e893e51f30c593bc796cdd90c8915714'></a>
         <a href='https://weibo.com/p/1005057625534975'><img src='https://img1.baidu.com/it/u=1340256327,3027741866&fm=26&fmt=auto&gp=0.jpg'></a>
     </head>
     <footer>
+        <style>
+            a{color:white}
+        </style>
         <hr>
         <h2>联系我</h2>
-        <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com' style='color: black;'>点我</a>或发送邮件给f20091219@outlook.com</p>
+        <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com'>点我</a>或发送邮件给f20091219@outlook.com</p>
         <h2>友情链接</h2>
         <a href='http://gitee.com'>Gitee</a>
     </footer>
