--- a/bugs/index.html
+++ b/bugs/index.html
@@ -15,9 +15,7 @@
     <body>
         <h1>Fangcat BUGS Report Center</h1>
         <br>
-        <h2>最近提出的Bugs</h2><a href='buglist.html' style='color:black;'>所有Bug(点我)</a>
-        <br>
-        <iframe src='bugs.html' height='200' width='1400'></iframe>
+        <a href='https://gitee.com/fcnemo/fcuos/issues?assignee_id=&author_id=&branch=&collaborator_ids=&issue_search=&label_ids=&label_text=&milestone_id=&priority=&private_issue=&program_id=&project_type=&scope=&sort=&state=all&target_project='><button>Bugs页面已迁移，点我跳转</button></a>
     </body>
     <footer>
         <style>
