--- a/bugs/index.html
+++ b/bugs/index.html
@@ -15,7 +15,7 @@
     <body>
         <h1>Fangcat BUGS Report Center</h1>
         <br>
-        <a href='https://gitee.com/fcnemo/fcuos/issues?assignee_id=&author_id=&branch=&collaborator_ids=&issue_search=&label_ids=&label_text=&milestone_id=&priority=&private_issue=&program_id=&project_type=&scope=&sort=&state=all&target_project='><button>Bugs页面已迁移，点我跳转</button></a>
+        <a href='https://gitee.com/fcnemo/fcuos/board?fullscreen=1'><button>Bugs页面已迁移，点我跳转</button></a>
     </body>
     <footer>
         <style>
