--- a/bugs/index.html
+++ b/bugs/index.html
@@ -15,7 +15,9 @@
     <body>
         <h1>Fangcat BUGS Report Center</h1>
         <br>
-        <a href='https://gitee.com/fcnemo/fcuos/board?fullscreen=1'><button>Bugs页面已迁移，点我跳转</button></a>
+        <a href='https://gitee.com/fcnemo/fcuos/board?fullscreen=1'><button>FCUOS Bugs页面，点我跳转</button></a>
+        <br>
+        <a href='https://gitee.com/fcnemo/hbc/board?fullscreen=1'><button>Hypixel Bedwars Chinese Bugs页面，点我跳转</button></a>
     </body>
     <footer>
         <style>
