--- a/bugs/index.html
+++ b/bugs/index.html
@@ -18,6 +18,8 @@
         <a href='https://gitee.com/fcnemo/fcuos/board?fullscreen=1'><button>FCUOS Bugs页面，点我跳转</button></a>
         <br>
         <a href='https://gitee.com/fcnemo/hbc/board?fullscreen=1'><button>Hypixel Bedwars Chinese Bugs页面，点我跳转</button></a>
+        <br>
+        <a href='https://gitee.com/fcnemo//wormy-remake/board?fullscreen=1'><button>Wormy Remake Bugs页面，点我跳转</button></a>
     </body>
     <footer>
         <style>
