--- a/remake.html
+++ b/remake.html
@@ -24,7 +24,7 @@
         <p>需要的库：Pygame/Easygui</p>
         <p>提取码：fang</p>
         <a href='https://pan.baidu.com/s/1vpgXTaBP-WUaASzlcb4__Q'><button>即刻下载</button></a>
-        <a href='assets/down/wm.htm'><button>不限速下载</button></a>
+        <a href='https://gitee.com/fcnemo/wormy-remake/blob/master/wormyremake.py'><button>不限速下载</button></a>
     </body>
     <footer>
         <style>
