--- a/polog.html
+++ b/polog.html
@@ -19,6 +19,11 @@
     <body>
         <h1>FCUOS版本更新日志（2016版本之后）</h1>
         <hr>
+        <h2>FCUOS 2016 Release</h2>
+        <p style="color: green;">|正式版|</p>
+        <h3>更新内容:</h3>
+        <p>忘记了</p>
+        <hr>
         <h2>FCUOS 2016 Snapshot v1</h2>
         <p style="color: green;">|小更新|</p>
         <p style="color: green;">|稳定版本|</p>
