--- a/bugs/index.html
+++ b/bugs/index.html
@@ -20,6 +20,8 @@
         <a href='https://gitee.com/fcnemo/hbc/board?fullscreen=1'><button>Hypixel Bedwars Chinese Bugs页面，点我跳转</button></a>
         <br>
         <a href='https://gitee.com/fcnemo//wormy-remake/board?fullscreen=1'><button>Wormy Remake Bugs页面，点我跳转</button></a>
+        <br>
+        <a href='https://gitee.com/organizations/fcnemo/issues?assignee_id=&author_id=&branch=&collaborator_ids=&issue_search=&label_ids=&label_text=&milestone_id=&priority=&private_issue=&program_id=&project_type=&scope=&sort=&state=all&target_project='><button>所有产品Bugs汇总页面，点我跳转</button></a>
     </body>
     <footer>
         <style>
