--- a/fcwos/index.html
+++ b/fcwos/index.html
@@ -10,6 +10,7 @@
 
 <html style="background-image: url('assets/wall.jfif');">
     <head>
+        <meta charset="utf-8">
     </head>
     <body>
         <script>
