--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </head>
     <body>
-        <a href='pptos.html'><img src='assets/swift/ossp2015.png' height='500' width='1400'></a>
+        <MARQUEE οnmοuseοver=stop() οnmοuseοut=start() scrollAmount=3 loop=infinite deplay="0"><a href='pptos.html'><img src='assets/swift/ossp2015.png' height='500' width='1400'></a><a href='remake.html'><img src='assets/swift/wmrm.png' height='500' width='1400'></a></MARQUEE>
         <h2>我的作品</h2>
         <p>点击以访问作品介绍页</p>
         <h3 style="text-align:center;"><a href='pptos.html' style='color: black;'>FCUOS</a><br><a href='remake.html' style='color: black;'>Wormy Remake</a><br><a href='https://gitee.com/fcnemo/hbc' style='color: black;'>Hypixel Bedwars Chinese</a><br><a href='https://gitee.com/fcnemo/fcwos' style='color: black;'>FCWOS</a><a href='fcwos/index.html'><button>在线预览</button></a><br><a href='nosite.html' style='color: black;'>Fangcat Watch</a><br><a href='nosite.html' style='color: black;'>Minecraft RE</a></h3>
