--- a/remake.html
+++ b/remake.html
@@ -17,6 +17,7 @@
         </div>
     </head>
     <body>
+        <img src='assets/swift/wmrm.png' height='500' width='1400'>
         <h1>Wormy Remake</h1>
         <p>改编自Al Sweigart的Wormy</p>
         <a href='http://inventwithpython.com/pygame/'><button>作者官网</button></a>
