--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"> </script>
   <div class="swiper-container" item-height="709" item-width="2000">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><a href="/pptos.html"><img src="swift/ossp2015.png"></a></div>
-      <div class="swiper-slide"><a href="/remake.html"><img src="swift/wmrm.png"></a></div>
+      <div class="swiper-slide"><a href="/pptos.html"><img src="assets/swift/ossp2015.png"></a></div>
+      <div class="swiper-slide"><a href="/remake.html"><img src="assets/swift/wmrm.png"></a></div>
 
     </div>
     <div class="swiper-button-next"></div>
