--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">    
     <script src="https://unpkg.com/swiper/swiper-bundle.js"> </script>  
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"> </script>
-  <div class="swiper-container" item-height="500" item-width="1500">
+  <div class="swiper-container">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><a href="/pptos.html"><img src="assets/swift/ossp2015.png"></a></div>
-      <div class="swiper-slide"><a href="/remake.html"><img src="assets/swift/wmrm.png"></a></div>
+      <div class="swiper-slide"><a href="/pptos.html"><img src="assets/swift/ossp2015.png" height="500" width="1500"></a></div>
+      <div class="swiper-slide"><a href="/remake.html"><img src="assets/swift/wmrm.png" height="500" width="1500"></a></div>
 
     </div>
     <div class="swiper-button-next"></div>
