--- a/index.html
+++ b/index.html
@@ -53,5 +53,7 @@
         <p>QQ:2950966704<br>E-Mail:<a href='mailto:f20091219@outlook.com'>点我</a>或发送邮件给f20091219@outlook.com</p>
         <h2>友情链接</h2>
         <a href='http://gitee.com'>Gitee</a>
+        <br>
+        <a href='https://www.swiper.com.cn/'>Swiper</a>
     </footer>
 </html>
