--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
   </div>
   <script>
     var swiper = new Swiper('.swiper-container', {
+      cssMode: true,
       navigation: {
         nextEl: '.swiper-button-next',
         prevEl: '.swiper-button-prev',
       },
+      pagination: {
+        el: '.swiper-pagination'
+      },
+      mousewheel: true,
+      keyboard: true,
     });
   </script>
         <h2>我的作品</h2>
