--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
   </div>
   <script>
     var swiper = new Swiper('.swiper-container', {
