--- a/index.html
+++ b/index.html
@@ -35,16 +35,21 @@
   </div>
   <script>
     var swiper = new Swiper('.swiper-container', {
-      cssMode: true,
+      spaceBetween: 30,
+      centeredSlides: true,
+      loop: true,
+      autoplay: {
+        delay: 4000,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
       navigation: {
         nextEl: '.swiper-button-next',
         prevEl: '.swiper-button-prev',
       },
-      pagination: {
-        el: '.swiper-pagination'
-      },
-      mousewheel: true,
-      keyboard: true,
     });
   </script>
         <h2>我的作品</h2>
