--- a/404.html
+++ b/404.html
@@ -1,20 +1,20 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title>该页面不存在-404.life</title>
-<link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="css/h-ui.reset.css"/>
-<link rel="stylesheet" type="text/css" href="css/index.css"/>
+<link rel="shortcut icon" href="assets/logo2.png">
+<link rel="stylesheet" type="text/css" href="assets/css/h-ui.reset.css"/>
+<link rel="stylesheet" type="text/css" href="assets/css/index.css"/>
 
 </head>
 <body>
 
 <div class="system">
-		<img src="picture/404.png"/>
+		<img src="assets/picture/404.png"/>
 	<div class="title">
 		<h2>页面走丢了...</h2>
-		<h4>远方的朋友你好！非常抱歉，您所请求的页面不存在！</h4>
+		<h4>您好！非常抱歉，您所请求的页面不存在！</h4>
 		<h4>请仔细检查您输入的网址是否正确。</h4>
 	</div>	
 </div>
