--- a/404.html
+++ b/404.html
@@ -16,6 +16,7 @@
 		<h2>页面走丢了...</h2>
 		<h4>您好！非常抱歉，您所请求的页面不存在！</h4>
 		<h4>请仔细检查您输入的网址是否正确。</h4>
+        <a href='index.html'><button><h3>回到首页</h3></button></a>
 	</div>	
 </div>
 
