--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>该页面不存在-404.life</title>
+<title>该页面不存在</title>
 <link rel="shortcut icon" href="assets/logo2.png">
 <link rel="stylesheet" type="text/css" href="assets/css/h-ui.reset.css"/>
 <link rel="stylesheet" type="text/css" href="assets/css/index.css"/>
@@ -16,6 +16,7 @@
 		<h2>页面走丢了...</h2>
 		<h4>您好！非常抱歉，您所请求的页面不存在！</h4>
 		<h4>请仔细检查您输入的网址是否正确。</h4>
+        <h4>本页面来自404.life</h4>
         <a href='index.html'><button><h3>回到首页</h3></button></a>
 	</div>	
 </div>
