--- a/404.html
+++ b/404.html
@@ -1,25 +1,27 @@
-<!DOCTYPE html>
-<html>
+
+<!DOCTYPE HTML>
 <head>
-<meta charset="UTF-8">
-<title>该页面不存在</title>
-<link rel="shortcut icon" href="assets/logo2.png">
-<link rel="stylesheet" type="text/css" href="assets/css/h-ui.reset.css"/>
-<link rel="stylesheet" type="text/css" href="assets/css/index.css"/>
-
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<title>该页面不存在-404.life</title>
+<link rel="shortcut icon" href="favicon.ico">
 </head>
+
 <body>
+<div class="box">
 
-<div class="system">
-		<img src="assets/picture/404.png"/>
-	<div class="title">
-		<h2>页面走丢了...</h2>
-		<h4>您好！非常抱歉，您所请求的页面不存在！</h4>
-		<h4>请仔细检查您输入的网址是否正确。</h4>
-        <h4>本页面来自404.life</h4>
-        <a href='index.html'><button><h3>回到首页</h3></button></a>
-	</div>	
+
+	<!-- <div class="box_nofound_wrap">
+		<div class="box_nofound_content">
+			<p class="nofound_img_warp"></p>
+			<div class="nofound_text">很抱歉，您访问的页面不存在！</div>
+			<div class="nofound_text">请仔细检查您输入的网址是否正确。</div>
+			<a class="nofound_link" href="https://404.life" >返回首页</a>
+		</div>
+	</div> -->
+
+<div class='newContent'>			<p><br/></p><p><br/></p><p><br/></p><p><br/></p><p><br/></p>			<p style='text-align:center;'><img src='./pageNotFound.png' alt=''></img></p>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>很抱歉，您访问的页面不存在！</div>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>请仔细检查您输入的网址是否正确。</div>			<a href='index.html' style='text-align:center; color:#333; font-size:13px; text-decoration:none; width:100px; height:32px; line-height:32px; border:1px solid #E3E2E8; display:block; margin:30px auto;'>返回首页</a>			<p><br/>		</p></div>
+
+
 </div>
-
 </body>
-</html>
