--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
-
+<!--本页面来自404.life-->
 <!DOCTYPE HTML>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<title>该页面不存在-404.life</title>
+<title>该页面不存在</title>
 <link rel="shortcut icon" href="favicon.ico">
 </head>
 
