--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <title>该页面不存在</title>
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" href="assets/logo2.png">
 </head>
 
 <body>
