--- a/polog.html
+++ b/polog.html
@@ -19,22 +19,35 @@
     <body>
         <h1>FCUOS版本更新日志（2016版本之后）</h1>
         <hr>
+        <h2>FCUOS 2017 21w10c</h2>
+        <p style="color: green;">|正式版|</p>
+        <h3>更新内容:</h3>
+        <p>新增搜索与Windows，将记事本数量增加到8个</p>
+        <br>
+        <a href='https://fangapp.lanzoui.com/izrHLrkad4j'><button>下载</button></a>
+        <hr>
         <h2>FCUOS 2016 Release</h2>
         <p style="color: green;">|正式版|</p>
         <h3>更新内容:</h3>
         <p>忘记了</p>
+        <br>
+        <a href='https://fangapp.lanzoui.com/iAa5Mrkacwb'><button>下载</button></a>
         <hr>
-        <h2>FCUOS 2016 Snapshot v1</h2>
+        <h2>FCUOS 2016 Snapshot 21w10b</h2>
         <p style="color: green;">|小更新|</p>
         <p style="color: green;">|稳定版本|</p>
         <h3>更新内容:</h3>
         <p>UI阴影，增加文件管理</p>
+        <br>
+        <a href='https://fangapp.lanzoui.com/ig3I3rkad0f'><button>下载</button></a>
         <hr>
-        <h2>FCUOS 2016 Snapshot v0.1</h2>
+        <h2>FCUOS 2016 Snapshot 21w10a</h2>
         <p style="color: green;">|小更新|</p>
         <p style="color: green;">|稳定版本|</p>
         <h3>更新内容:</h3>
         <p>添加了一个应用</p>
+        <br>
+        <a href='https://fangapp.lanzoui.com/iCXCsrkacyd'><button>下载</button></a>
     </body>
     <footer>
         <style>
