--- a/contact.htm
+++ b/contact.htm
@@ -15,8 +15,8 @@
             a{text-decoration:none;color:rgb(0, 119, 255);}
             footer{background-color: gray;color:white}
         </style>
-        <a href='https://space.bilibili.com/588672425'><img src='https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fwww.looktmt.com%2Fupload%2Ffile%2Fbizupload%2F201910%2F17%2Faddfbcdg_105255264.png&refer=http%3A%2F%2Fwww.looktmt.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1628319783&t=e893e51f30c593bc796cdd90c8915714'></a>
-        <a href='https://weibo.com/p/1005057625534975'><img src='https://img1.baidu.com/it/u=1340256327,3027741866&fm=26&fmt=auto&gp=0.jpg'></a>
+        <a href='https://space.bilibili.com/588672425'><img src='assets/bilibili.jfjf'></a>
+        <a href='https://weibo.com/p/1005057625534975'><img src='assets/weibo.jpg'></a>
     </head>
     <footer>
         <style>
