--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 		</div>
 	</div> -->
 
-<div class='newContent'>			<p><br/></p><p><br/></p><p><br/></p><p><br/></p><p><br/></p>			<p style='text-align:center;'><img src='./pageNotFound.png' alt=''></img></p>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>很抱歉，您访问的页面不存在！</div>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>请仔细检查您输入的网址是否正确。</div>			<a href='index.html' style='text-align:center; color:#333; font-size:13px; text-decoration:none; width:100px; height:32px; line-height:32px; border:1px solid #E3E2E8; display:block; margin:30px auto;'>返回首页</a>			<p><br/>		</p></div>
+<div class='newContent'>			<p><br/></p><p><br/></p><p><br/></p><p><br/></p><p><br/></p>			<p style='text-align:center;'><img src='/pageNotFound.png' alt=''></img></p>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>很抱歉，您访问的页面不存在！</div>			<div style='text-align:center; font-size:16px; line-height:30px; color:#333333;'>请仔细检查您输入的网址是否正确。</div>			<a href='index.html' style='text-align:center; color:#333; font-size:13px; text-decoration:none; width:100px; height:32px; line-height:32px; border:1px solid #E3E2E8; display:block; margin:30px auto;'>返回首页</a>			<p><br/>		</p></div>
 
 
 </div>
